# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.0.1]

### Added

- s3, cdn and dns modules
- Initial project structure

[0.0.1]: https://github.com/asajaroff/tf-aws-s3-website/releases/tag/v0.0.1...v0.0.2
[0.0.1]: https://github.com/asajaroff/tf-aws-s3-website/releases/tag/v0.0.1