@@ -1,4 +1,7 @@
-# Local terragrunt directories
+# Terragrunt related files
+**/.terragrunt-cache/
+**/terragrunt-debug.tfvars.json
+
 **/.terragrunt-cache/*
 
 # Local .terraform directories
@@ -13,8 +16,8 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
