@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2024 tf-aws-s3-website
+Copyright (c) 2024 Alejandro Sajaroff <alejandro@sajaroff.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
